flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowAction__c/PersonalWorkflowAction__c.object-meta.xml
<CustomObject>
    <label>Personal Workflow Action</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>PersonalAction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PersonalWorkflowActions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>