flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowAction__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>