flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowAction__c/fields/Parent_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Workflow_Id__c</fullName>
    <label>Parent Workflow Id</label>
    <referenceTo>PersonalWorkflow__c</referenceTo>
    <relationshipLabel>PersonalWorkflowActions</relationshipLabel>
    <relationshipName>PersonalWorkflowActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>