flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowAction__c/fields/PersonalWorkflowActionInputParam__c.field-meta.xml
<CustomField>
    <fullName>PersonalWorkflowActionInputParam__c</fullName>
    <label>PersonalWorkflowActionInputParam</label>
    <length>200</length>
    <type>Text</type>
</CustomField>